Update Salmon to match with current filename

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -28,9 +28,9 @@ RUN apt-get update && \
 
 # Install Salmon
 RUN wget https://github.com/COMBINE-lab/salmon/archive/refs/tags/v1.10.1.tar.gz && \
-    tar -xvzf salmon-1.10.2_linux_x86_64.tar.gz && \
-    mv salmon-1.10.2_linux_x86_64/bin/salmon /usr/local/bin && \
-    rm -rf salmon-1.10.2_linux_x86_64*
+    tar -xvzf v1.10.1.tar.gz && \
+    mv salmon-1.10.1/ /usr/local/bin && \
+    rm -rf salmon-1.10.1*
 
 # Set default shell
 SHELL ["/bin/bash", "-c"]
